# builtin_redis

./: README.md  setup.cfg  setup.py
builtin_redis/: __init__.py  redis.py
examples/: simple.py
scripts/: loadconf.py
