[metadata]
name = builtin_redis
version = attr: builtin_redis.__version__
url = https://github.com/pyflow/builtin_redis
project_urls =
    Source Code = https://github.com/pyflow/builtin_redis/
    Issue Tracker = https://github.com/pyflow/builtin_redis/issues/

license = MIT License
author = Zhuo Wei
author_email = zeaphoo@qq.com
maintainer = Zhuo Wei
maintainer_email = zeaphoo@qq.com
description = Builtin Redis for python app, no redis server install needed in system.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: PL/SQL
    Framework :: AsyncIO
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Database
    Operating System :: POSIX


[options]
packages = find:
include_package_data = True
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
exclude =
    examples*
    scripts*
    docs*
    tests*

[tool:pytest]
testpaths = tests
asyncio_mode = strict
filterwarnings =
    error
    ignore:.*:ResourceWarning
    ignore::DeprecationWarning